--- a/exemplo-html/index.html
+++ b/exemplo-html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>    
     <header>
-    <span><a href="#">EuroTour</a></span>    
+    <img src="imgs/eurotour-logo-cor.png" title="EuroTour" alt="EuroTour_logo" align="left">
     <nav>
     <ul>
     <li><a href="#">Passagens</a></li>
@@ -52,6 +52,7 @@
     </section>
   </main>  
   <footer>	  	  	  
+	<img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_footer" align="left">
   	<nav>  	
   	<h4><a href="#">EuroTour</a></h4>
   		<ul>
