--- a/exemplo-html/index.html
+++ b/exemplo-html/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Exemplo HTML</title>
+    <title>EuroTour</title>
 </head>
 <body>    
     <header>
-    <img src="imgs/eurotour-logo-cor.png" title="EuroTour" alt="EuroTour_logo" align="left">
+    <a href="index.html"><img src="imgs/eurotour-logo-cor.png" title="EuroTour" alt="EuroTour_logo" align="left"></a>
     <nav>
     <ul>
-    <li><a href="#">Passagens</a></li>
-    <li><a href="#">Hospedagem</a></li>
-    <li><a href="#">Pontos Turísticos</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="passagens.html">Passagens</a></li>
+      <li><a href="hospedagens.html">Hospedagem</a></li>
+      <li><a href="pontos-turisticos.html">Pontos Turísticos</a></li>
     </ul>
     </nav>
   </header>  
@@ -52,9 +53,8 @@
     </section>
   </main>  
   <footer>	  	  	  
-	<img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_footer" align="left">
-  	<nav>  	
-  	<h4><a href="#">EuroTour</a></h4>
+    <a href="index.html"><img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_logo" </a>
+  	<nav>  	  	
   		<ul>
     		<li><a href="#">Facebook</a></li>
     		<li><a href="#">Instagram</a></li>
