--- a/exemplo-html/pontos-turisticos.html
+++ b/exemplo-html/pontos-turisticos.html
@@ -22,7 +22,7 @@
   <main>
     <section>
       <h2>Pontos Turísticos</h2>
-      <h3>Opções e viagens</h3>
+      <h3>Opções de viagens</h3>
       <li><a href="#">Lisboa</a></li>
       <li><a href="#">Paris</a></li>
       <li><a href="#">Roma</a></li>
