--- a/exemplo-html/index.html
+++ b/exemplo-html/index.html
@@ -18,7 +18,7 @@
       <li><a href="pontos-turisticos.html">Pontos Turísticos</a></li>
     </ul>
     </nav>
-  </header>  
+  	</header>
   <main>
     <section>
       <h2>Bem-vindo a EuroTour</h2>
@@ -50,17 +50,18 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!</p>      
       
-    </section>
+    </section>   
   </main>  
-  <footer>	  	  	  
-    <a href="index.html"><img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_logo" </a>
-  	<nav>  	  	
-  		<ul>
-    		<li><a href="#">Facebook</a></li>
-    		<li><a href="#">Instagram</a></li>
-    		<li><a href="#">Linkedin</a></li>
-  		</ul>
-  	</nav>
-  </footer>    
+    <footer>
+    <a href="index.html"><img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_logo" align="left"></a>
+    <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="passagens.html">Passagens</a></li>
+      <li><a href="hospedagens.html">Hospedagem</a></li>
+      <li><a href="pontos-turisticos.html">Pontos Turísticos</a></li>
+    </ul>
+    </nav>
+  	</footer>   
 </body>
 </html>
