atividade exigida na plataforma

--- a/exemplo-html/exemplo2-html/index.html
+++ b/exemplo-html/exemplo2-html/index.html
@@ -10,6 +10,7 @@
 <body>    
     <header>
     <h1>Marco Zero - Recife-PE</h1>
+    <a href="recife_antigo.html">Recife Antigo</a>
   	</header>
   <main>
     <section>
