atividade exigida na plataforma

--- a/exemplo-html/exemplo2-html/index.html
+++ b/exemplo-html/exemplo2-html/index.html
@@ -10,7 +10,7 @@
 <body>    
     <header>
     <h1>Marco Zero - Recife-PE</h1>
-    <a href="recife_antigo.html">Recife Antigo</a>
+    <strong><a href="recife_antigo.html">Recife Antigo</a></strong>
   	</header>
   <main>
     <section>
@@ -43,7 +43,7 @@
     </section>   
   </main>  
     <footer>
-    <strong><a href="https://pt.wikipedia.org/wiki/Pra%C3%A7a_Rio_Branco_(Recife)" target="_blank">Fonte: Wikipédia</a></strong>
+    <a href="https://pt.wikipedia.org/wiki/Pra%C3%A7a_Rio_Branco_(Recife)" target="_blank">Fonte: Wikipédia</a>
   	</footer>   
 </body>
 </html>
