--- a/exemplo-html/exemplo2-html/recife_antigo.html
+++ b/exemplo-html/exemplo2-html/recife_antigo.html
@@ -10,6 +10,7 @@
 <body>    
     <header>
     <h1>Recife Antigo</h1>
+    <strong><a href="index.html">Marco Zero</a></strong>
   	</header>
   <main>
     <section>
@@ -46,8 +47,8 @@
     </section>   
   </main>  
     <footer>
-    <strong><a href="https://pt.wikipedia.org/wiki/Torre_Malakoff" target="_blank">Fonte: Toore Malakoff (Wikipédia)</a></strong><br>
-    <strong><a href="https://pt.wikipedia.org/wiki/Pa%C3%A7o_do_Frevo" target="_blank">Fonte: Museu do Frevo (Wikipédia)</a></strong>
+    <a href="https://pt.wikipedia.org/wiki/Torre_Malakoff" target="_blank">Fonte: Toore Malakoff (Wikipédia)</a><br>
+    <a href="https://pt.wikipedia.org/wiki/Pa%C3%A7o_do_Frevo" target="_blank">Fonte: Museu do Frevo (Wikipédia)</a>
   	</footer>   
 </body>
 </html>
