--- a/aula-css/index.html
+++ b/aula-css/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Aula de CSS - 001/h1>
+<h1>Aula de CSS - 001</h1>
     <div class="caixa"><a href="#">1ª div</a></div>
     <div class="caixa"><a href="#">2ª div</a></div>
     <div class="caixa"><a href="#">3ª div</a></div>
