Estilo por class

--- a/aula-css/index.html
+++ b/aula-css/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <h1>Aula de CSS - 001</h1>
-    <div class="caixa"><a href="#">1ª div</a></div>
-    <div class="caixa"><a href="#">2ª div</a></div>
-    <div class="caixa"><a href="#">3ª div</a></div>
+    <div><a href="#">1ª div</a></div>
+    <div class="caixa-do-meio"><a href="#">2ª div</a></div>
+    <div><a href="#">3ª div</a></div>
 </body>
 </html>
