--- a/exemplo-html/index.html
+++ b/exemplo-html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>EuroTour</title>
 </head>
 <body>    
@@ -50,18 +50,26 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel doloribus nihil, sunt dolore, eaque minima quod repellendus earum, velit nostrum placeat corporis. Laudantium, consequuntur nam! Nam amet a vel!</p>      
       
-    </section>   
+    </section>
+    <section id="fontes">
+    	<div class="fonte-01">
+        Roboto
+      </div>
+      <div class="fonte-02">
+        Maven Pro
+      </div>
+    </section>
   </main>  
     <footer>
-    <a href="index.html"><img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_logo" align="left"></a>
-    <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="passagens.html">Passagens</a></li>
-      <li><a href="hospedagens.html">Hospedagem</a></li>
-      <li><a href="pontos-turisticos.html">Pontos Turísticos</a></li>
-    </ul>
-    </nav>
+    	<a href="index.html"><img src="imgs/eurotour-logo-pb.png" title="EuroTour" alt="EuroTour_logo" align="left"></a>
+    	<nav class="n_footer">
+    	<ul>
+      	<li><a href="index.html">Home</a></li>
+      	<li><a href="passagens.html">Passagens</a></li>
+      	<li><a href="hospedagens.html">Hospedagem</a></li>
+      	<li><a href="pontos-turisticos.html">Pontos Turísticos</a></li>
+    	</ul>
+    	</nav>
   	</footer>   
 </body>
 </html>
