--- a/aulas-BancosdeDados/atividade9/index.html
+++ b/aulas-BancosdeDados/atividade9/index.html
@@ -27,6 +27,7 @@
 
         h1{
 			font-size: clamp(2rem, 2.6vw, 2.3rem);
+            text-align: center;
 		}
 		
 		h3{
@@ -43,7 +44,7 @@
 			margin: 0;
 		}
 
-        #obs{
+        .obs{
             background-color: dimgray;
             color: #fff;
             font-size: clamp(1.3rem, 2vw, 1.7rem);
@@ -52,8 +53,11 @@
             text-indent: 0;
 			padding: 0.5rem;
 			margin: 0;
-            border-radius: 0.8rem;
-            
+            border-radius: 0.8rem;            
+        }
+
+        h3.obs{
+            text-align: center;
         }
 
         span{
@@ -87,10 +91,10 @@
     <h1>Atividade da plataforma sobre Procedure (SQL)</h1>
     <p>Uma empresa de vendas tem um banco de dados com informações sobre os seus produtos. Ela precisa criar um relatório que faça um levantamento diário da quantidade de produtos comprados por dia. Para ajudar a empresa, crie um procedure para agilizar esse processo.</p>
 
-    <span><strong>Ferramenta online utilizada</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>
+    <span><strong>Ferramenta online utilizada (PostgreSQL)</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>
     
     <div id="codigo">
-        <h3>Tabelas de exemplo para utilização de PROCEDURES</h3>
+        <h3 class="obs">Tabelas de exemplo para utilização de PROCEDURES</h3>
         <h3>Criando uma tabela de produtos</h3>
         <code><pre>
             CREATE TABLE tb_produto(
@@ -170,7 +174,7 @@
             $$;
         </code></pre>
 
-        <p id="obs"><strong>Obs.</strong>: Uma view é um objeto que é formado por declarações SELECTs e retorna uma visualização de dados específica de uma ou mais tabelas de um banco de dados.</p>
+        <p class="obs"><strong>Obs.</strong>: Uma view é um objeto que é formado por declarações SELECTs e retorna uma visualização de dados específica de uma ou mais tabelas de um banco de dados.</p>
 
         <h3>Chamando o PROCEDURE criado</h3>
         <code>
