Correção textual na atividade 9.

--- a/aulas-BancosdeDados/atividade9/index.html
+++ b/aulas-BancosdeDados/atividade9/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procedure (SQL)</title>
+    <title>Procedure(s) (SQL)</title>
     <style>	
 		@charset "UTF-8";
 		@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -88,13 +88,13 @@
 	</style>
 </head>
 <body>
-    <h1>Atividade da plataforma sobre Procedure (SQL)</h1>
+    <h1>Atividade da plataforma sobre Procedure(s) (SQL)</h1>
     <p>Uma empresa de vendas tem um banco de dados com informações sobre os seus produtos. Ela precisa criar um relatório que faça um levantamento diário da quantidade de produtos comprados por dia. Para ajudar a empresa, crie um procedure para agilizar esse processo.</p>
 
     <span><strong>Ferramenta online utilizada (PostgreSQL)</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>
     
     <div id="codigo">
-        <h3 class="obs">Tabelas de exemplo para utilização de PROCEDURES</h3>
+        <h3 class="obs">Tabelas de exemplo para utilização de PROCEDURE(S)</h3>
         <h3>Criando uma tabela de produtos</h3>
         <code><pre>
             CREATE TABLE tb_produto(
