--- a/aulas-BancosdeDados/atividade10/index.html
+++ b/aulas-BancosdeDados/atividade10/index.html
@@ -175,8 +175,7 @@
                         FOREIGN KEY (id_produto)
                         REFERENCES tb_produto(id),
                     data_venda VARCHAR(10) NOT NULL,	
-                    qtd_venda INT NOT NULL,	
-                    valor_compra FLOAT NULL
+                    qtd_venda INT NOT NULL
                 );
             </pre>
         </code>
