--- a/aulas-BancosdeDados/atividade11/index.html
+++ b/aulas-BancosdeDados/atividade11/index.html
@@ -86,7 +86,7 @@
         
     <h3>Melhoria(s) na integridade dos dados</h3>  
     <p>
-        Para reforçar a integridade de dados, é crucial a adoção de medidas e revisar a infraestrutura de de proteção dos dados. Abaixo algumas das possíveis medidas:
+        Para reforçar a integridade de dados, é crucial a adoção de medidas e revisar a infraestrutura de proteção dos dados. Abaixo algumas das possíveis medidas:
     </p>
 
     <ul style="list-style-type:disc;">
@@ -109,7 +109,7 @@
         <li>adoção de medidas preventivas que definam acesso apenas para usuários autorizados. Acesso este, definido em níveis de hierarquia e real demanda. Limitados aos setores / áreas que os mesmos se relacionem (financeiro, RH, marketing, vendas, etc.);</li>
         <li>organizar a hierarquia de acesso, categorizando os dados conforme critérios como, o potencial de impacto nos processos do negócio, em caso de vazamentos acidentais ou intencionais;</li>
         <li>variando conforme o grau de confidencialidade dos dados, usuários(as) com acesso a dados mais críticos devem ser treinados / informados sobre a importância nos cuidados com acesso / manipulação das informações, além dos riscos que possíveis vazamentos possam acarretar;</li>
-        <li>conscientizar quem acessa os dados sobre a importância de seguimento dos procedimentos de segurança adequados. Informando sobre os riscos, por exemplo, da conexão de dispositivos externos à rede, o uso de senhas seguras e o não compartilhamento de informações críticas em locais públicos ou com baixa segurança virtual;</li>
+        <li>conscientizar quem acessa os dados sobre a importância de seguimento dos procedimentos de segurança adequados. Informando sobre os riscos, por exemplo, da conexão de dispositivos externos à rede, o uso de senhas inseguras e o não compartilhamento de informações críticas em locais públicos ou com baixa segurança virtual;</li>
         <li>no campo da infraestrutura, sistemas para criptografia de dados, uso de dois fatores de autenticação, tokens de acesso, dentre outros são formas de ampliar ainda mais a confiabilidade dos dados envolvidos.</li>
     </ul>
 
@@ -123,7 +123,7 @@
         <li>atualização periódica dos sistemas utilizados, adequação na largura de banda conforme a demanda do negócio. Uso de links temporários que mantenham a comunicação com os bancos de dados ativa. Além de link redundante que contorne possíveis quedas na conexão principal;</li>
         <li>elaborar um plano de Recuperação de Desastres (RD), que defina quais procedimentos serão adotados, sua ordem de execução para o tratamento de possíveis crises que impactem na manutenção e continuidade dos negócios, além dos meios para recuperação dos dados afetados;</li>
         <li>tais RD’s não devem se limitar aos casos de ataques virtuais, erros no uso dos sistemas, etc. Os mesmos também devem incluir possíveis catástrofes naturais (enchentes, tempestades elétricas, etc.) e quaisquer ocorrências que possam interferir na usabilidade / acesso dos equipamentos de TI envolvidos (incêndios, quedas repentinas de energia, dentre outros);</li>
-        <li>aplicar a geração / guarda rotineira de backups, não só em meios físicos, como também remotos e / ou na nuvem. Estes, além do armazenamento, oferecem opções de acesso global, criptografia, proteção contra vírus, dentre outros.</li>
+        <li>aplicar a geração / guarda rotineira de backups, não só em meios físicos, como também remotos e / ou na nuvem. Os serviços na nuvem, além do armazenamento, oferecem opções de acesso global, criptografia, proteção contra vírus, dentre outros.</li>
     </ul>
 
         
