--- a/aulas-BancosdeDados/simulacao/index.html
+++ b/aulas-BancosdeDados/simulacao/index.html
@@ -216,7 +216,7 @@
                 </pre>
             </code>
 
-        <h3>Inserindo dados na tabela tb_artista</h3>
+        <h3>Inserindo dados de exemplo na tabela tb_artista</h3>
             <code>
                 <pre>
                     INSERT INTO tb_artista (artista)
@@ -303,7 +303,7 @@
                 </pre>
             </code>
                         
-        <h3>Buscando as músicas e o disco de um artista específico</h3>
+        <h3>Buscando as músicas e o discos de um artista específico</h3>
             <code>
                 <pre>
                     SELECT tb_musicas.musica, tb_discografia.disco
