--- a/api_curso-proz/json/atividade_01.html
+++ b/api_curso-proz/json/atividade_01.html
@@ -79,6 +79,6 @@
     </p>
 
 	<h3 class="obs">Link para o arquivo JSON</h3>
-	<a href="http://"></a>
+	<a href="https://viniciusm0raes.github.io/proz-talento-cloud/api_curso-proz/json/produtos.json">Produtos no formato JSON</a>
 </body>
 </html>
