--- a/api_curso-proz/json/atividade_01.html
+++ b/api_curso-proz/json/atividade_01.html
@@ -108,7 +108,7 @@
 				"nome": [
 					"PC",
 					"Notebook",
-					"Tablet"
+					"Celular"
 				],
 				"marca": [
 					"Dell",
@@ -118,10 +118,10 @@
 				"categoria": [
 					"informatica"
 				],
-				"preço": [
-					3053,
-					2583,
-					1035
+				"preço (R$)": [
+					3053.35,
+					2583.53,
+					1035.08
 				],
 				"quant_estoque": [
 					53,
