--- a/api_curso-proz/requisicoes/atividade_02.html
+++ b/api_curso-proz/requisicoes/atividade_02.html
@@ -101,7 +101,7 @@
     </p>
 
 		<p style="text-align: center; font-size: clamp(2rem, 2.5vw, 2.3rem);">
-			<strong>https://lojafalsaapi.com/produtos/ordenar=dec&limite=20</strong>
+			<strong>https://lojafalsaapi.com/produtos?ordenar=dec&limite=20</strong>
 		</p>
 	
 </body>
