--- a/curso_extensao_frontend/modulo-2/bootstrap/boostrap-componentes/index.html
+++ b/curso_extensao_frontend/modulo-2/bootstrap/boostrap-componentes/index.html
@@ -44,7 +44,7 @@
         <img src="https://seeklogo.com/images/H/html5-logo-EF92D240D7-seeklogo.com.png" class="card-img-top" alt="...">
         <h5 class="card-title">HTML</h5>
         <p class="card-text">HTML é uma liguagem de marcação...</p>
-        <a href="/aulas-html" class="btn btn-primary">Vamos para a aula!</a>
+        <a href="#" class="btn btn-primary">Vamos para a aula!</a>
     </div>
     </div> 
 
