--- a/curso_extensao_frontend/modulo-4/typescript/tipagem-avancada/index.html
+++ b/curso_extensao_frontend/modulo-4/typescript/tipagem-avancada/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css">
-    <script type="module" src="/src/main.ts" defer></script>
-    <title>TypeScript - Tipagem Intermediária</title>
+    <script type="module" src="/src/main.ts"></script>
+    <title>TypeScript - Avançada</title>
   </head>
   <body>
-    <h1>TypeScript - Tipagem Intermediária</h1>
+    <h1>TypeScript - Avançada</h1>
     
   </body>
 </html>
