Continuar edição do Readme.md

--- a/aulas-BancosdeDados/atividade10/index.html
+++ b/aulas-BancosdeDados/atividade10/index.html
@@ -148,7 +148,7 @@
                 SELECT * FROM fn_cad_cli_dia();
             </pre>
         </code>
-        <p class="obs"><strong>Obs.</strong>: Ainda que, para atendimento da solicitação na atividade, estas <u>não sejam necessárias</u>, criando as tabelas tb_produto, tb_vendas e a função fn_valor_total, que reune informações das duas tabelas para cálculo do <u>valor total da compra</u>.</p>
+        <p class="obs"><strong>Obs.</strong>: Ainda que, para atendimento da solicitação na atividade, estas <u>não sejam necessárias</u>, criando as tabelas tb_produto, tb_vendas e a função fn_valor_total, que reúne informações das duas tabelas para cálculo do <u>valor total da compra</u>.</p>
         <h3>Criando a tabela tb_produto</h3>
         <code>
             <pre>
