Ajustando exibição das atividades

--- a/aulas-BancosdeDados/atividade6/index.html
+++ b/aulas-BancosdeDados/atividade6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procedure(s) (SQL)</title>
+    <title>Primeiros códigos SQL</title>
     <style>	
 		@charset "UTF-8";
 		@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
