Ajustando exibição das atividades

--- a/aulas-BancosdeDados/atividade6/index.html
+++ b/aulas-BancosdeDados/atividade6/index.html
@@ -56,7 +56,7 @@
             border-radius: 0.8rem;            
         }       
 
-        div > ul{
+        div > ol{
             margin: 0;
         }
 
@@ -100,14 +100,14 @@
     <h1>Bancos de Dados - Módulo I</h1>    
     <div class="obs">
         <p>De acordo com os comandos aprendidos, programe códigos SQL para criar um banco de dados chamado ESCOLA e deixe-o pronto para o uso. Depois, pesquise qual é o comando utilizado para inserir uma tabela no banco de dados e siga as instruções:</p>
-        <ul>
-            <li>1. crie uma tabela chamada ALUNO;</li>
-            <li>2. defina os atributos da tabela;</li>
-            <li>3. adicione a chave primária de nome ID (identificador);</li>
-            <li>4. adicione um atributo nome do tipo varchar;</li>
-            <li>5. adicione um atributo e-mail do tipo varchar;</li>
-            <li>6. adicione um atributo endereço do tipo varchar.</li>
-        </ul>        
+        <ol>
+            <li>crie uma tabela chamada ALUNO;</li>
+            <li>defina os atributos da tabela;</li>
+            <li>adicione a chave primária de nome ID (identificador);</li>
+            <li>adicione um atributo nome do tipo varchar;</li>
+            <li>adicione um atributo e-mail do tipo varchar;</li>
+            <li>adicione um atributo endereço do tipo varchar.</li>
+        </ol>        
     </div>
 
     <span><strong>Ferramenta online utilizada (PostgreSQL)</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>    
