--- a/aulas-BancosdeDados/atividade7/index.html
+++ b/aulas-BancosdeDados/atividade7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOINS em consultas</title>
+    <title>Relacionamento com Chaves Estrangeiras (Foreign Key - FK)</title>
     <style>	
 		@charset "UTF-8";
 		@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
