--- a/aulas-BancosdeDados/atividade11/index.html
+++ b/aulas-BancosdeDados/atividade11/index.html
@@ -25,12 +25,13 @@
 			padding: 1.3rem;
 		}
 
-        h1{
-			font-size: clamp(2rem, 2.6vw, 2.3rem);
-            text-align: center;
+		h1{
+			font-size: clamp(2.3rem, 3vw, 2.6rem);			
+			margin: 0 0 1rem 0;			
+			font-weight: bold;
 		}
 		
-		h3{
+		h2, h3{
 			font-size: clamp(1.5rem, 2vw, 1.7rem);
 			margin-bottom: 0.2rem;
 		}
@@ -71,7 +72,8 @@
 	</style>
 </head>
 <body>
-    <h1>Atividade da plataforma sobre integridade, confiabilidade e disponibilidade dos dados</h1>
+    <h1>Bancos de Dados - Módulo II</h1>    
+    <h3 class="obs">Atividade da plataforma sobre integridade, confiabilidade e disponibilidade dos dados</h3>
     <p>Após uma varredura rápida no sistema de banco de dados de uma empresa de vendas, identificamos a necessidade de melhorar a segurança dessas informações. Por isso, será necessário desenvolver um novo banco para armazenar os dados mais importantes, como detalhes dos clientes, valores faturados diariamente e informações sobre os produtos, além de outros. Sendo assim, explique quais são os pilares da segurança de dados que devem ser seguidos para que o novo banco seja bem projetado e funcione corretamente.</p>
  
     <h3 class="obs">Importância da segurança de dados</h3>
