--- a/aulas-BancosdeDados/atividade10/index.html
+++ b/aulas-BancosdeDados/atividade10/index.html
@@ -25,53 +25,62 @@
 			padding: 1.3rem;
 		}
 
-        h1{
-			font-size: clamp(2rem, 2.6vw, 2.3rem);
-            text-align: center;
-		}
-		
-		h3{
-			font-size: clamp(1.5rem, 2vw, 1.7rem);
-			margin-bottom: 0.2rem;
+		h1{
+			font-size: clamp(2.3rem, 3vw, 2.6rem);			
+			margin: 0 0 1rem 0;			
+			font-weight: bold;
 		}
 
-		p{
-			font-size: clamp(1.3rem, 2vw, 1.7rem);
-			line-height: 1.5;
-			text-align: justify;
-            text-indent: 1.3rem;
-			padding: 0.5rem;
-			margin: 0;
-		}
-
-        .obs{
-            background-color: dimgray;
-            color: #fff;
+        h2.obs{
+			color: #000;
             font-size: clamp(1.3rem, 2vw, 1.7rem);
+            text-align: center;
+			background-color: lightgrey;	
+			font-weight: bold;		
+        }
+			
+		h3{
+			font-size: clamp(1.5rem, 1.8vw, 1.7rem);
+			margin-bottom: 1rem;
+		}
+
+		.obs{
+            background-color: grey;
+            color: #fff;
+            font-size: clamp(1.5rem, 1.8vw, 1.7rem);
 			line-height: 1.5;
 			text-align: justify;
-            text-indent: 0;
-			padding: 0.5rem;
-			margin: 0;
+            text-indent: 0;			
+			margin: 1rem 0;
+            padding: 1rem;            
             border-radius: 0.8rem;            
+        }       
+
+        div > ol{
+            margin: 0;
         }
 
-        h3.obs{
-            text-align: center;
+        div > p{
+            margin: 0;
         }
 
         span{
-            font-size: clamp(1.3rem, 2vw, 1.7rem);
+            background-color: #000;
+            color: #fff;
+            font-size: clamp(1.5rem, 1.8vw, 1.7rem);
 			line-height: 1.5;
+            margin-top: 0;
+            padding: 0.5rem;
+            border-radius: 0.8rem;   
         }
 
-        code,pre{            
-            font-size: clamp(1.3rem, 2vw, 1.7rem);
+        code{            
+            font-size: clamp(1.5rem, 1.8vw, 1.7rem);
         }
 
         a{
 			margin: 1rem 0.5rem;
-			font-size: clamp(1.3rem, 2vw, 1.7rem);
+			font-size: clamp(1.5rem, 1.8vw, 1.7rem);
 			color: darkgoldenrod;
 			text-decoration: none;    
 		}    
@@ -82,16 +91,18 @@
 		}
 
         #codigo{
-            margin: 2.6rem;
-            margin-left: 8vw;
+            margin: 1rem 10rem;            
+            padding: 0;            
         }
 	</style>
 </head>
 <body>
-    <h1>Atividade da plataforma sobre Function(s) (SQL)</h1>
-    <p>Uma loja tem um banco de dados que contém todo o controle de vendas de produtos e de cadastro de clientes. Pensando nisso, crie uma função para somar todos os clientes que foram cadastrados na loja durante um dia.</p>
+    <h1>Bancos de Dados - Módulo II</h1>  
+    <div class="obs">    
+        <p>Uma loja tem um banco de dados que contém todo o controle de vendas de produtos e de cadastro de clientes. Pensando nisso, crie uma <strong>função</strong> para somar todos os clientes que foram cadastrados na loja durante um dia.</p>
+    </div>
 
-    <span><strong>Ferramenta online utilizada (PostgreSQL)</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>    
+    <span><strong>Ferramenta online utilizada (PostgreSQL)</strong>: <a href="https://sqliteonline.com/" target="_blank">https://sqliteonline.com/</a></span>  
     
     <div id="codigo">
         <h3 class="obs">Tabela(s) para exemplificação de Function(s)</h3>
